# AOIS

./: README.md  pyproject.toml
aois_sem4_lab1/: main.py
aois_sem4_lab1/src/: binarylib.py  utils.py
